# mlops_2026_9

./: .gitignore  README.md  commands  pyproject.toml
.github/workflows/: main.yml
dags/: ab_test_pipeline.py  data_pipeline.py  deploy_model_image.py  inference_pipeline.py  learning_pipeline.py  proc_for_ml_pipeline.py  test.py
docs/: schema.excalidraw
infra/: main.tf  main.txt  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/airflow-cluster/: main.tf  provider.tf
infra/modules/iam/: main.tf
infra/modules/k8s/: main.tf  outputs.tf  variables.tf
infra/modules/kafka/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/mlflow-vm/: main.tf  outputs.tf  provider.tf  variables.tf
infra/modules/mlflow-vm/docker/: docker-compose.yml  docker-compose_yml_old
infra/modules/mlflow-vm/docker/init/: 01_restore.sh
infra/modules/mlflow-vm/scripts/: stress_test.py  stress_test_restapi .py
infra/modules/mlflow-vm/templates/: cloud-init.yaml
infra/modules/network/: outputs.tf  provider.tf
infra/modules/storage/: main.tf
restapi/: Dockerfile  requirements.txt  test.py
restapi/k8s/: deployment-template.yaml  deployment.yaml  service-template.yaml  service.yaml
restapi/scripts/: inference_functions.py  rest_api_model.py
restapi/tests/: test_simple.py
src/: ab_test.py  clean_data3.py  common_functions.py  inference.py  install_ml_libs.sh  install_ml_libs_for_inference.sh  learning3.py  ml_functions.py  proc_for_ml_data3.py  rest_api_model.py
utils/: push_secrets_to_github_repo.py
utils/tmp/: deployment.yaml  service.yaml
(+3 files in other folders)
