[project]
name = "mlops-2026-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.35.63",
    "git-filter-repo>=2.47.0",
    "ipykernel==6.29.5",
    "loguru==0.7.2",
    "pynacl==1.5.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.5",
]
